# Crypto-Analytics

./: pyproject.toml
data/bronze/: crypto_stock_bronze_btc.parquet
data/raw/: crypto_stock_raw_btc.parquet
notebooks/: CA_1 - Explore data and types.ipynb  CA_2 - Data Analytics Explore.ipynb  CA_3 - Feature Selection.ipynb  CA_4 - Train models.ipynb  teste.ipynb
src/: extract.py  transform.py  utils.py
