[tool.poetry]
name = "crypto-analytics"
version = "0.1.0"
description = ""
authors = ["Giuseppe31-s <giuseppe31tinti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
requests = "^2.31.0"
ta = "^0.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
