[tool.poetry]
name = "crypto-analytics"
version = "0.1.0"
description = ""
authors = ["Giuseppe31-s <giuseppe31tinti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
requests = "^2.31.0"
ta = "^0.11.0"
black = "^24.2.0"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"
nbformat = "^5.10.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
